# pr-swarm

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  action.yml  pyproject.toml
.github/: review-agent.yml
.github/workflows/: pr-review-agent.yml
docker/: Dockerfile  docker-compose.yml
pr_swarm/: __init__.py  __main__.py  config.py  graph.py  models.py  state.py
pr_swarm/github/: api.py  comment.py  sarif.py
pr_swarm/memory/: episodic.py  semantic.py
pr_swarm/nodes/: architecture_cop.py  coverage_checker.py  diff_parser.py  secrets_scanner.py  security_auditor.py  style_checker.py  synthesizer.py
pr_swarm/tools/: ast_parser.py  coverage.py  gitleaks.py  semgrep.py
tests/: test_comment.py  test_config.py  test_graph.py  test_models.py  test_sarif.py  test_tools.py
tests/golden_prs/: layer_violation.diff  leaked_api_key.diff  missing_auth.diff  sql_injection.diff  xss_vulnerability.diff
tests/integration/: test_end_to_end.py
tests/test_nodes/: test_diff_parser.py  test_secrets_scanner.py  test_synthesizer.py
