[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-swarm"
version = "1.0.0"
description = "Automated PR security review system built on LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "PyGithub>=2.1.0",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3.0",
    "tree-sitter>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]
tools = [
    "semgrep>=1.60.0",
    "bandit>=1.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
